--- a/index.html
+++ b/index.html
@@ -37,21 +37,26 @@
       border-radius: 10px;
       margin-bottom: 2rem;
       box-shadow: 0 0 15px #0f0;
-      position: relative;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1.5rem;
+      justify-content: space-between;
     }
     .chat-entry {
       background: #2c2c2c;
       padding: 2rem;
-      margin-bottom: 2rem;
+      width: 48%;
+      min-height: 200px;
       border-radius: 15px;
       border: 2px solid #ff0040;
       font-size: 1.4rem;
-      display: inline-block;
-      width: 47%;
-      margin-right: 2%;
       color: #00bfff;
+      box-sizing: border-box;
     }
     .chat-entry strong {
+      color: #ff4d4d;
+    }
+    .chat-entry div {
       color: #ff4d4d;
     }
     .chat-entry a {
@@ -100,8 +105,8 @@
       animation: float 2s infinite ease-in-out;
     }
     .whatsapp-fixed img {
-      width: 80px;
-      height: 80px;
+      width: 60px;
+      height: 60px;
     }
     @keyframes float {
       0% { transform: translateY(0); }
@@ -124,27 +129,27 @@
   </header>  <div class="container">
     <div class="chat-box">
       <div class="chat-entry">
-        <div><strong>बॉट:</strong> हमारे पास प्राइवेट ग्रुप की 100% पक्की जानकारी है। लीक नंबर चाहिए? अभी WhatsApp करें - बिल्कुल फ्री!</div>
+        <div><strong style="color:red">बॉट:</strong> <span style="color:#00bfff">हमारे पास प्राइवेट ग्रुप की 100% पक्की जानकारी है। लीक नंबर चाहिए? अभी WhatsApp करें - बिल्कुल फ्री!</span></div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">अभी संपर्क करें</a>
       </div>
       <div class="chat-entry">
-        <div><strong>यूज़र:</strong> भैया, मुझे अभी का फिक्स लीक नंबर दो।</div>
+        <div><strong style="color:red">यूज़र:</strong> <span style="color:#00bfff">भैया, मुझे अभी का फिक्स लीक नंबर दो।</span></div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">लीक नंबर पाएं</a>
       </div>
       <div class="chat-entry">
-        <div><strong>बॉट:</strong> आज का स्पेशल लीक: कैपिटल रिंग के लिए 62 (शैक्षिक प्रयोग हेतु)।</div>
+        <div><strong style="color:red">बॉट:</strong> <span style="color:#00bfff">आज का स्पेशल लीक: कैपिटल रिंग के लिए 62 (शैक्षिक प्रयोग हेतु)।</span></div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">कन्फर्म करें</a>
       </div>
       <div class="chat-entry">
-        <div><strong>यूज़र:</strong> क्या आज का भरोसेमंद नंबर मिला?</div>
+        <div><strong style="color:red">यूज़र:</strong> <span style="color:#00bfff">क्या आज का भरोसेमंद नंबर मिला?</span></div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">नंबर चाहिए</a>
       </div>
       <div class="chat-entry">
-        <div><strong>बॉट:</strong> डेली फ्री अपडेट के लिए अभी WhatsApp करें। कोई चार्ज नहीं!</div>
+        <div><strong style="color:red">बॉट:</strong> <span style="color:#00bfff">डेली फ्री अपडेट के लिए अभी WhatsApp करें। कोई चार्ज नहीं!</span></div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">फ्री जॉइन करें</a>
       </div>
       <div class="chat-entry">
-        <div><strong>बॉट:</strong> लिमिटेड लोगों के लिए एक्सक्लूसिव नंबर लिस्ट तैयार है।</div>
+        <div><strong style="color:red">बॉट:</strong> <span style="color:#00bfff">लिमिटेड लोगों के लिए एक्सक्लूसिव नंबर लिस्ट तैयार है।</span></div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">एक्सेस पाएं</a>
       </div>
     </div><h2 style="color: #00ff00">आज की भविष्यवाणी तालिका</h2>
