--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       font-size: 18px;
     }
     .container {
-      max-width: 900px;
+      max-width: 100%;
       margin: auto;
       padding: 2rem 1rem;
     }
@@ -40,13 +40,14 @@
       display: flex;
       flex-wrap: wrap;
       gap: 1.5rem;
-      justify-content: space-between;
+      justify-content: center;
+      width: 100%;
     }
     .chat-entry {
       background: #2c2c2c;
       padding: 2rem;
-      width: 48%;
-      min-height: 200px;
+      width: 320px;
+      height: 320px;
       border-radius: 15px;
       border: 2px solid #ff0040;
       font-size: 1.4rem;
