--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
   <meta name="description" content="100% Leak Number, Daily Predictions, Trusted Data. Shiksha ke uddeshya ke liye.">
   <title>नंबर इनसाइट 786</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #121212;
       color: #ffffff;
-      position: relative;
     }
     header {
       background-color: #222;
@@ -27,32 +29,33 @@
       font-size: 18px;
     }
     .container {
-      max-width: 100%;
+      max-width: 1200px;
       margin: auto;
-      padding: 2rem 1rem;
+      padding: 1rem;
     }
     .chat-box {
       background-color: #1e1e1e;
-      padding: 2rem;
+      padding: 1rem;
       border-radius: 10px;
       margin-bottom: 2rem;
       box-shadow: 0 0 15px #0f0;
       display: flex;
       flex-wrap: wrap;
-      gap: 1.5rem;
       justify-content: center;
-      width: 100%;
+      gap: 1rem;
     }
     .chat-entry {
       background: #2c2c2c;
-      padding: 2rem;
-      width: 320px;
-      height: 320px;
+      width: 300px;
+      height: 300px;
       border-radius: 15px;
       border: 2px solid #ff0040;
-      font-size: 1.4rem;
+      font-size: 1.2rem;
       color: #00bfff;
-      box-sizing: border-box;
+      padding: 1rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
     .chat-entry strong {
       color: #ff4d4d;
@@ -64,11 +67,12 @@
       display: inline-block;
       background-color: #25D366;
       color: white;
-      padding: 0.8rem 1.5rem;
+      padding: 0.6rem 1rem;
       border-radius: 6px;
       font-size: 1rem;
       text-decoration: none;
-      margin-top: 1rem;
+      margin-top: 0.5rem;
+      text-align: center;
     }
     .chart-table {
       width: 100%;
@@ -106,8 +110,8 @@
       animation: float 2s infinite ease-in-out;
     }
     .whatsapp-fixed img {
-      width: 60px;
-      height: 60px;
+      width: 70px;
+      height: 70px;
     }
     @keyframes float {
       0% { transform: translateY(0); }
@@ -130,27 +134,27 @@
   </header>  <div class="container">
     <div class="chat-box">
       <div class="chat-entry">
-        <div><strong style="color:red">बॉट:</strong> <span style="color:#00bfff">हमारे पास प्राइवेट ग्रुप की 100% पक्की जानकारी है। लीक नंबर चाहिए? अभी WhatsApp करें - बिल्कुल फ्री!</span></div>
+        <div><strong>बॉट:</strong> हमारे पास प्राइवेट ग्रुप की 100% पक्की जानकारी है। लीक नंबर चाहिए? अभी WhatsApp करें - बिल्कुल फ्री!</div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">अभी संपर्क करें</a>
       </div>
       <div class="chat-entry">
-        <div><strong style="color:red">यूज़र:</strong> <span style="color:#00bfff">भैया, मुझे अभी का फिक्स लीक नंबर दो।</span></div>
+        <div><strong>यूज़र:</strong> भैया, मुझे अभी का फिक्स लीक नंबर दो।</div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">लीक नंबर पाएं</a>
       </div>
       <div class="chat-entry">
-        <div><strong style="color:red">बॉट:</strong> <span style="color:#00bfff">आज का स्पेशल लीक: कैपिटल रिंग के लिए 62 (शैक्षिक प्रयोग हेतु)।</span></div>
+        <div><strong>बॉट:</strong> आज का स्पेशल लीक: कैपिटल रिंग के लिए 62 (शैक्षिक प्रयोग हेतु)।</div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">कन्फर्म करें</a>
       </div>
       <div class="chat-entry">
-        <div><strong style="color:red">यूज़र:</strong> <span style="color:#00bfff">क्या आज का भरोसेमंद नंबर मिला?</span></div>
+        <div><strong>यूज़र:</strong> क्या आज का भरोसेमंद नंबर मिला?</div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">नंबर चाहिए</a>
       </div>
       <div class="chat-entry">
-        <div><strong style="color:red">बॉट:</strong> <span style="color:#00bfff">डेली फ्री अपडेट के लिए अभी WhatsApp करें। कोई चार्ज नहीं!</span></div>
+        <div><strong>बॉट:</strong> डेली फ्री अपडेट के लिए अभी WhatsApp करें। कोई चार्ज नहीं!</div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">फ्री जॉइन करें</a>
       </div>
       <div class="chat-entry">
-        <div><strong style="color:red">बॉट:</strong> <span style="color:#00bfff">लिमिटेड लोगों के लिए एक्सक्लूसिव नंबर लिस्ट तैयार है।</span></div>
+        <div><strong>बॉट:</strong> लिमिटेड लोगों के लिए एक्सक्लूसिव नंबर लिस्ट तैयार है।</div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">एक्सेस पाएं</a>
       </div>
     </div><h2 style="color: #00ff00">आज की भविष्यवाणी तालिका</h2>
