--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="100% Leak Number, Daily Predictions, Trusted Data. Shiksha ke uddeshya ke liye.">
   <title>नंबर इनसाइट 786</title>
+  <h2 style="color: yellow; font-weight: bold; text-align: center;">
+🎯YHN LEAK NUMBERS 100% FIX🎯
+</h2>
+<p style="color: white; text-align: center;">
+NEECHE HAMARE PASS FB, GB, GL, DS SABKE FIX NUMBERS HAIN.<br>
+AFTERPASS PAR LENE KE LIYE ABHI CONTACT KREN 👇👇👇👇👇👇👇
+</p>
   <style>
     * {
       box-sizing: border-box;
