--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <h1 class="glow">Number Insight 786</h1>
 
 <h2 style="color: yellow; font-weight: bold; text-align: center;">
-🎯YHN LEAK NUMBERS 100% FIX🎯
+🎯YHN LEAK NUMBERS 100% FIX MILEGA🎯
 </h2>
 <p style="color: white; text-align: center;">
 NEECHE HAMARE PASS FB, GB, GL, DS SABKE FIX NUMBERS HAIN.<br>
