--- a/index.html
+++ b/index.html
@@ -130,7 +130,6 @@
 </head>
 <body>
   <header>
-    <h1>नंबर इनसाइट 786</h1>
     <h1 class="glow">Number Insight 786</h1>
 
 <h2 style="color: yellow; font-weight: bold; text-align: center;">
@@ -140,7 +139,7 @@
 NEECHE HAMARE PASS FB, GB, GL, DS SABKE FIX NUMBERS HAIN.<br>
 AFTERPASS PAR LENE KE LIYE ABHI CONTACT KREN 👇👇👇👇👇👇👇
 </p>
-    <p>गोपनीय स्रोत से ली गई 100% फिक्स संख्या। केवल शैक्षिक उद्देश्य के लिए।</p>
+    <p>100% फिक्स नंबर लेने के लिए हमारे ऊपर विश्वास करें हमे व्हाट्सएप पर अभी कॉल या मैसेज करे ।</p>
   </header>  <div class="container">
     <div class="chat-box">
       <div class="chat-entry">
