--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <h1 class="glow">Number Insight 786</h1>
 
 <h2 style="color: yellow; font-weight: bold; text-align: center;">
-🎯YHN LEAK NUMBERS 100% FIX MILEGA🎯
+🎯LEAK NUMBERS 100% FIX FB GB GL DS MILEGA AFTER PASS 🎯
 </h2>
 <p style="color: white; text-align: center;">
 NEECHE HAMARE PASS FB, GB, GL, DS SABKE FIX NUMBERS HAIN.<br>
