--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="hi">
+<!DOCTYPE html>
+<html lang="hi">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -46,35 +47,26 @@
     }
     .chat-entry {
       background: #2c2c2c;
-      width: 320px;
-      height: 320px;
+      width: 300px;
+      height: 300px;
       border-radius: 15px;
       border: 2px solid #ff0040;
-      font-size: 1.4rem;
-      color: #00bfff;
+      font-size: 1.3rem;
       padding: 1.2rem;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       line-height: 1.8rem;
+      color: #fff;
+    }
+    .chat-entry:nth-child(odd) div {
+      color: #ffff00; /* yellow */
+    }
+    .chat-entry:nth-child(even) div {
+      color: #00bfff; /* blue */
     }
     .chat-entry strong {
-      color: yellow;
-    }
-    .chat-entry:nth-child(2) div {
-      color: red;
-    }
-    .chat-entry:nth-child(3) div {
-      color: blue;
-    }
-    .chat-entry:nth-child(4) div {
-      color: orange;
-    }
-    .chat-entry:nth-child(5) div {
-      color: #00ffcc;
-    }
-    .chat-entry:nth-child(6) div {
-      color: #ffcc00;
+      color: #ff4d4d;
     }
     .chat-entry a {
       display: inline-block;
@@ -123,8 +115,8 @@
       animation: float 2s infinite ease-in-out;
     }
     .whatsapp-fixed img {
-      width: 75px;
-      height: 75px;
+      width: 70px;
+      height: 70px;
     }
     @keyframes float {
       0% { transform: translateY(0); }
@@ -138,27 +130,37 @@
       padding: 2rem 1rem;
       background: #111;
     }
-    @media (max-width: 768px) {
-      .chat-entry {
-        width: 90%;
-        height: auto;
-      }
-    }
   </style>
 </head>
 <body>
   <header>
     <h1 class="glow">Number Insight 786</h1>
     <h2 style="color: yellow; font-weight: bold; text-align: center;">
-    🎯LEAK NUMBERS 100% FIX FB GB GL DS MILEGA AFTER PASS 🎯
+      🎯LEAK NUMBERS 100% FIX FB GB GL DS MILEGA AFTER PASS 🎯
     </h2>
     <p style="color: white; text-align: center;">
-    NEECHE HAMARE PASS FB, GB, GL, DS SABKE FIX NUMBERS HAIN.<br>
-    AFTERPASS PAR LENE KE LIYE ABHI CONTACT KREN 👇👇👇👇👇👇👇
+      NEECHE HAMARE PASS FB, GB, GL, DS SABKE FIX NUMBERS HAIN.<br>
+      AFTERPASS PAR LENE KE LIYE ABHI CONTACT KREN 👇👇👇👇👇👇👇
     </p>
     <p>100% फिक्स नंबर लेने के लिए हमारे ऊपर विश्वास करें हमे व्हाट्सएप पर अभी कॉल या मैसेज करे ।</p>
   </header>
+
   <div class="container">
+
+    <!-- 🔴 Live Result Section Added Here -->
+    <section style="margin-bottom: 2rem;">
+      <h2 style="color: #00ff00; text-align:center;">🎯 लाइव रिजल्ट – Faridabad | Ghaziabad | Gali | Desawar</h2>
+      <iframe 
+        src="https://satta-king-fixed-no.in/satta-king-786.php" 
+        width="100%" 
+        height="550" 
+        style="border: none; border-radius: 10px; box-shadow: 0 0 10px green;" 
+        allowfullscreen 
+        loading="lazy">
+      </iframe>
+    </section>
+
+    <!-- 💬 Chat Box -->
     <div class="chat-box">
       <div class="chat-entry">
         <div><strong>बॉट:</strong> हमारे पास प्राइवेट ग्रुप की 100% पक्की जानकारी है। लीक नंबर चाहिए? अभी WhatsApp करें - बिल्कुल फ्री! भरोसे का नाम, रिजल्ट गारंटी के साथ।</div>
@@ -184,41 +186,53 @@
         <div><strong>बॉट:</strong> लिमिटेड लोगों के लिए एक्सक्लूसिव नंबर लिस्ट तैयार है। अभी संपर्क करें।</div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">एक्सेस पाएं</a>
       </div>
-    </div><h2 style="color: #00ff00">आज की भविष्यवाणी तालिका</h2>
-<table class="chart-table">
-  <thead>
-    <tr>
-      <th>क्षेत्र</th>
-      <th>समय</th>
-      <th>संख्या</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr><td>ज़ोन A</td><td>01:00 PM</td><td>76</td></tr>
-    <tr><td>मेट्रो B</td><td>02:00 PM</td><td>52</td></tr>
-    <tr><td>सेंट्रल सिटी</td><td>03:00 PM</td><td>93</td></tr>
-    <tr><td>क्षेत्र X</td><td>04:00 PM</td><td>14</td></tr>
-    <tr><td>नॉर्थ वैली</td><td>05:00 PM</td><td>37</td></tr>
-    <tr><td>कोस्टल एज</td><td>06:00 PM</td><td>48</td></tr>
-    <tr><td>कैपिटल रिंग</td><td>07:00 PM</td><td>62</td></tr>
-    <tr><td>ज़ोन Y</td><td>08:00 PM</td><td>20</td></tr>
-    <tr><td>मेट्रो साउथ</td><td>09:00 PM</td><td>85</td></tr>
-    <tr><td>ज़ोन Z</td><td>10:00 PM</td><td>11</td></tr>
-  </tbody>
-</table>
+    </div>
 
-<div class="cta">
-  <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">📲 मुख्य व्हाट्सऐप ग्रुप जॉइन करें</a>
-</div>
+    <!-- 📊 Chart Table -->
+    <h2 style="color: #00ff00">आज की भविष्यवाणी तालिका</h2>
+    <table class="chart-table">
+      <thead>
+        <tr>
+          <th>क्षेत्र</th>
+          <th>समय</th>
+          <th>संख्या</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr><td>ज़ोन A</td><td>01:00 PM</td><td>76</td></tr>
+        <tr><td>मेट्रो B</td><td>02:00 PM</td><td>52</td></tr>
+        <tr><td>सेंट्रल सिटी</td><td>03:00 PM</td><td>93</td></tr>
+        <tr><td>क्षेत्र X</td><td>04:00 PM</td><td>14</td></tr>
+        <tr><td>नॉर्थ वैली</td><td>05:00 PM</td><td>37</td></tr>
+        <tr><td>कोस्टल एज</td><td>06:00 PM</td><td>48</td></tr>
+        <tr><td>कैपिटल रिंग</td><td>07:00 PM</td><td>62</td></tr>
+        <tr><td>ज़ोन Y</td><td>08:00 PM</td><td>20</td></tr>
+        <tr><td>मेट्रो साउथ</td><td>09:00 PM</td><td>85</td></tr>
+        <tr><td>ज़ोन Z</td><td>10:00 PM</td><td>11</td></tr>
+      </tbody>
+    </table>
 
-  </div>  <div class="whatsapp-fixed">
+    <!-- CTA Button -->
+    <div class="cta">
+      <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">📲 मुख्य व्हाट्सऐप ग्रुप जॉइन करें</a>
+    </div>
+  </div>
+
+  <!-- Floating WhatsApp Icon -->
+  <div class="whatsapp-fixed">
     <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI" target="_blank">
       <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
     </a>
-  </div>  <footer>
+  </div>
+
+  <!-- Footer -->
+  <footer>
     <p>यह वेबसाइट केवल शैक्षिक जानकारी साझा करने हेतु है। हम किसी भी प्रकार की सट्टा या वित्तीय गतिविधियों को प्रोत्साहित नहीं करते।</p>
     <p>&copy; 2025 Insight786.in</p>
-  </footer>  <script>
+  </footer>
+
+  <!-- Auto Redirect Script -->
+  <script>
     let scrolled = false;
     window.addEventListener('scroll', () => {
       if (!scrolled) {
@@ -228,5 +242,6 @@
         }, 5000);
       }
     });
-  </script></body>
+  </script>
+</body>
 </html>
