--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
       margin: auto;
       padding: 1rem;
     }
+
+    /* Chat Box Styles */
     .chat-box {
       background-color: #1e1e1e;
       padding: 1rem;
@@ -52,21 +54,24 @@
       border-radius: 15px;
       border: 2px solid #ff0040;
       font-size: 1.3rem;
+      color: #00bfff;
       padding: 1.2rem;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       line-height: 1.8rem;
-      color: #fff;
-    }
-    .chat-entry:nth-child(odd) div {
-      color: #ffff00; /* yellow */
-    }
-    .chat-entry:nth-child(even) div {
-      color: #00bfff; /* blue */
     }
     .chat-entry strong {
       color: #ff4d4d;
+    }
+    .chat-entry div {
+      color: #ffcc00;
+    }
+    .chat-entry:nth-child(2) div {
+      color: #00bfff;
+    }
+    .chat-entry:nth-child(3) div {
+      color: #ff4444;
     }
     .chat-entry a {
       display: inline-block;
@@ -79,6 +84,8 @@
       margin-top: 0.5rem;
       text-align: center;
     }
+
+    /* Table */
     .chart-table {
       width: 100%;
       border-collapse: collapse;
@@ -95,6 +102,7 @@
       background-color: #2c2c2c;
       color: #00ff00;
     }
+
     .cta {
       text-align: center;
       margin: 2rem 0;
@@ -107,6 +115,7 @@
       border-radius: 5px;
       font-size: 20px;
     }
+
     .whatsapp-fixed {
       position: fixed;
       bottom: 80px;
@@ -115,14 +124,15 @@
       animation: float 2s infinite ease-in-out;
     }
     .whatsapp-fixed img {
-      width: 70px;
-      height: 70px;
+      width: 90px;
+      height: 90px;
     }
     @keyframes float {
       0% { transform: translateY(0); }
       50% { transform: translateY(-10px); }
       100% { transform: translateY(0); }
     }
+
     footer {
       text-align: center;
       font-size: 0.85rem;
@@ -136,31 +146,31 @@
   <header>
     <h1 class="glow">Number Insight 786</h1>
     <h2 style="color: yellow; font-weight: bold; text-align: center;">
-      🎯LEAK NUMBERS 100% FIX FB GB GL DS MILEGA AFTER PASS 🎯
+    🎯LEAK NUMBERS 100% FIX FB GB GL DS MILEGA AFTER PASS 🎯
     </h2>
     <p style="color: white; text-align: center;">
-      NEECHE HAMARE PASS FB, GB, GL, DS SABKE FIX NUMBERS HAIN.<br>
-      AFTERPASS PAR LENE KE LIYE ABHI CONTACT KREN 👇👇👇👇👇👇👇
+    NEECHE HAMARE PASS FB, GB, GL, DS SABKE FIX NUMBERS HAIN.<br>
+    AFTERPASS PAR LENE KE LIYE ABHI CONTACT KREN 👇👇👇👇👇👇👇
     </p>
     <p>100% फिक्स नंबर लेने के लिए हमारे ऊपर विश्वास करें हमे व्हाट्सएप पर अभी कॉल या मैसेज करे ।</p>
   </header>
 
+  <!-- ✅ LIVE RESULT SECTION -->
+  <section style="margin-bottom: 2rem;">
+    <h2 style="color: #00ff00; text-align:center;">🎯 लाइव रिजल्ट – Faridabad | Ghaziabad | Gali | Desawar</h2>
+    <iframe 
+      src="https://satta-king-fixed-no.in/satta-king-786.php" 
+      width="100%" 
+      height="550" 
+      style="border: none; border-radius: 10px; box-shadow: 0 0 10px green;" 
+      allowfullscreen 
+      loading="lazy">
+    </iframe>
+  </section>
+
   <div class="container">
 
-    <!-- 🔴 Live Result Section Added Here -->
-    <section style="margin-bottom: 2rem;">
-      <h2 style="color: #00ff00; text-align:center;">🎯 लाइव रिजल्ट – Faridabad | Ghaziabad | Gali | Desawar</h2>
-      <iframe 
-        src="https://satta-king-fixed-no.in/satta-king-786.php" 
-        width="100%" 
-        height="550" 
-        style="border: none; border-radius: 10px; box-shadow: 0 0 10px green;" 
-        allowfullscreen 
-        loading="lazy">
-      </iframe>
-    </section>
-
-    <!-- 💬 Chat Box -->
+    <!-- ✅ CHAT BOX START -->
     <div class="chat-box">
       <div class="chat-entry">
         <div><strong>बॉट:</strong> हमारे पास प्राइवेट ग्रुप की 100% पक्की जानकारी है। लीक नंबर चाहिए? अभी WhatsApp करें - बिल्कुल फ्री! भरोसे का नाम, रिजल्ट गारंटी के साथ।</div>
@@ -188,7 +198,7 @@
       </div>
     </div>
 
-    <!-- 📊 Chart Table -->
+    <!-- ✅ CHART TABLE -->
     <h2 style="color: #00ff00">आज की भविष्यवाणी तालिका</h2>
     <table class="chart-table">
       <thead>
@@ -212,26 +222,25 @@
       </tbody>
     </table>
 
-    <!-- CTA Button -->
     <div class="cta">
       <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">📲 मुख्य व्हाट्सऐप ग्रुप जॉइन करें</a>
     </div>
   </div>
 
-  <!-- Floating WhatsApp Icon -->
+  <!-- ✅ WHATSAPP FLOAT BUTTON -->
   <div class="whatsapp-fixed">
     <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI" target="_blank">
       <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
     </a>
   </div>
 
-  <!-- Footer -->
+  <!-- ✅ FOOTER -->
   <footer>
     <p>यह वेबसाइट केवल शैक्षिक जानकारी साझा करने हेतु है। हम किसी भी प्रकार की सट्टा या वित्तीय गतिविधियों को प्रोत्साहित नहीं करते।</p>
     <p>&copy; 2025 Insight786.in</p>
   </footer>
 
-  <!-- Auto Redirect Script -->
+  <!-- ✅ AUTO REDIRECT TO WHATSAPP -->
   <script>
     let scrolled = false;
     window.addEventListener('scroll', () => {
