--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
   <meta name="description" content="100% Leak Number, Daily Predictions, Trusted Data. Shiksha ke uddeshya ke liye.">
   <title>नंबर इनसाइट 786</title>
   <style>
-    * {
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; }
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -34,8 +32,6 @@
       margin: auto;
       padding: 1rem;
     }
-
-    /* Chat Box Styles */
     .chat-box {
       background-color: #1e1e1e;
       padding: 1rem;
@@ -65,13 +61,7 @@
       color: #ff4d4d;
     }
     .chat-entry div {
-      color: #ffcc00;
-    }
-    .chat-entry:nth-child(2) div {
-      color: #00bfff;
-    }
-    .chat-entry:nth-child(3) div {
-      color: #ff4444;
+      color: #ff4d4d;
     }
     .chat-entry a {
       display: inline-block;
@@ -84,8 +74,6 @@
       margin-top: 0.5rem;
       text-align: center;
     }
-
-    /* Table */
     .chart-table {
       width: 100%;
       border-collapse: collapse;
@@ -102,7 +90,6 @@
       background-color: #2c2c2c;
       color: #00ff00;
     }
-
     .cta {
       text-align: center;
       margin: 2rem 0;
@@ -115,24 +102,22 @@
       border-radius: 5px;
       font-size: 20px;
     }
-
     .whatsapp-fixed {
       position: fixed;
-      bottom: 80px;
+      bottom: 20px;
       right: 20px;
       z-index: 100;
       animation: float 2s infinite ease-in-out;
     }
     .whatsapp-fixed img {
-      width: 90px;
-      height: 90px;
+      width: 85px;
+      height: 85px;
     }
     @keyframes float {
       0% { transform: translateY(0); }
       50% { transform: translateY(-10px); }
       100% { transform: translateY(0); }
     }
-
     footer {
       text-align: center;
       font-size: 0.85rem;
@@ -143,37 +128,45 @@
   </style>
 </head>
 <body>
+
   <header>
     <h1 class="glow">Number Insight 786</h1>
     <h2 style="color: yellow; font-weight: bold; text-align: center;">
-    🎯LEAK NUMBERS 100% FIX FB GB GL DS MILEGA AFTER PASS 🎯
+      🎯LEAK NUMBERS 100% FIX FB GB GL DS MILEGA AFTER PASS 🎯
     </h2>
     <p style="color: white; text-align: center;">
-    NEECHE HAMARE PASS FB, GB, GL, DS SABKE FIX NUMBERS HAIN.<br>
-    AFTERPASS PAR LENE KE LIYE ABHI CONTACT KREN 👇👇👇👇👇👇👇
+      NEECHE HAMARE PASS FB, GB, GL, DS SABKE FIX NUMBERS HAIN.<br>
+      AFTERPASS PAR LENE KE LIYE ABHI CONTACT KREN 👇👇👇👇👇👇👇
     </p>
     <p>100% फिक्स नंबर लेने के लिए हमारे ऊपर विश्वास करें हमे व्हाट्सएप पर अभी कॉल या मैसेज करे ।</p>
   </header>
 
-  <!-- ✅ LIVE RESULT SECTION -->
+  <!-- ✅ FIXED RESULT BOX -->
   <section style="margin-bottom: 2rem;">
     <h2 style="color: #00ff00; text-align:center;">🎯 लाइव रिजल्ट – Faridabad | Ghaziabad | Gali | Desawar</h2>
-    <iframe 
-      src="https://satta-king-fixed-no.in/satta-king-786.php" 
-      width="100%" 
-      height="550" 
-      style="border: none; border-radius: 10px; box-shadow: 0 0 10px green;" 
-      allowfullscreen 
-      loading="lazy">
-    </iframe>
+
+    <div style="max-width: 600px; margin: auto; padding: 1rem; background: #1c1c1c; border: 2px solid #00ff00; border-radius: 10px; box-shadow: 0 0 10px #0f0;">
+      <table style="width: 100%; border-collapse: collapse; font-size: 1.4rem; color: #fff;">
+        <thead>
+          <tr style="background: #2e2e2e;">
+            <th style="padding: 10px;">Game</th>
+            <th style="padding: 10px;">Result</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr><td style="padding: 10px; text-align:center; color: #00ffff;">Faridabad</td><td style="padding: 10px; text-align:center; color: #ff4d4d;">46</td></tr>
+          <tr><td style="padding: 10px; text-align:center; color: #00ffff;">Ghaziabad</td><td style="padding: 10px; text-align:center; color: #ff4d4d;">82</td></tr>
+          <tr><td style="padding: 10px; text-align:center; color: #00ffff;">Gali</td><td style="padding: 10px; text-align:center; color: #ff4d4d;">14</td></tr>
+          <tr><td style="padding: 10px; text-align:center; color: #00ffff;">Desawar</td><td style="padding: 10px; text-align:center; color: #ff4d4d;">21</td></tr>
+        </tbody>
+      </table>
+    </div>
   </section>
 
   <div class="container">
-
-    <!-- ✅ CHAT BOX START -->
     <div class="chat-box">
       <div class="chat-entry">
-        <div><strong>बॉट:</strong> हमारे पास प्राइवेट ग्रुप की 100% पक्की जानकारी है। लीक नंबर चाहिए? अभी WhatsApp करें - बिल्कुल फ्री! भरोसे का नाम, रिजल्ट गारंटी के साथ।</div>
+        <div><strong>बॉट:</strong> हमारे पास प्राइवेट ग्रुप की 100% पक्की जानकारी है। लीक नंबर चाहिए? अभी WhatsApp करें - बिल्कुल फ्री!</div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">अभी संपर्क करें</a>
       </div>
       <div class="chat-entry">
@@ -181,7 +174,7 @@
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">लीक नंबर पाएं</a>
       </div>
       <div class="chat-entry">
-        <div><strong>बॉट:</strong> आज का स्पेशल लीक: कैपिटल रिंग के लिए 62 (शैक्षिक प्रयोग हेतु)। रिजल्ट टाइम पर मिलेगा!</div>
+        <div><strong>बॉट:</strong> आज का स्पेशल लीक: कैपिटल रिंग के लिए 62 (शैक्षिक प्रयोग हेतु)।</div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">कन्फर्म करें</a>
       </div>
       <div class="chat-entry">
@@ -189,16 +182,15 @@
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">नंबर चाहिए</a>
       </div>
       <div class="chat-entry">
-        <div><strong>बॉट:</strong> डेली फ्री अपडेट के लिए अभी WhatsApp करें। कोई चार्ज नहीं! नंबर गारंटी के साथ।</div>
+        <div><strong>बॉट:</strong> डेली फ्री अपडेट के लिए अभी WhatsApp करें। कोई चार्ज नहीं!</div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">फ्री जॉइन करें</a>
       </div>
       <div class="chat-entry">
-        <div><strong>बॉट:</strong> लिमिटेड लोगों के लिए एक्सक्लूसिव नंबर लिस्ट तैयार है। अभी संपर्क करें।</div>
+        <div><strong>बॉट:</strong> लिमिटेड लोगों के लिए एक्सक्लूसिव नंबर लिस्ट तैयार है।</div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">एक्सेस पाएं</a>
       </div>
     </div>
 
-    <!-- ✅ CHART TABLE -->
     <h2 style="color: #00ff00">आज की भविष्यवाणी तालिका</h2>
     <table class="chart-table">
       <thead>
@@ -227,20 +219,18 @@
     </div>
   </div>
 
-  <!-- ✅ WHATSAPP FLOAT BUTTON -->
+  <!-- 🟢 WhatsApp Logo Floating -->
   <div class="whatsapp-fixed">
     <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI" target="_blank">
       <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
     </a>
   </div>
 
-  <!-- ✅ FOOTER -->
   <footer>
     <p>यह वेबसाइट केवल शैक्षिक जानकारी साझा करने हेतु है। हम किसी भी प्रकार की सट्टा या वित्तीय गतिविधियों को प्रोत्साहित नहीं करते।</p>
     <p>&copy; 2025 Insight786.in</p>
   </footer>
 
-  <!-- ✅ AUTO REDIRECT TO WHATSAPP -->
   <script>
     let scrolled = false;
     window.addEventListener('scroll', () => {
