--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="hi">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="100% Leak Number, Daily Predictions, Trusted Data. Shiksha ke uddeshya ke liye.">
-  <title>नंबर इनसाइट 786</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Number Insight 786</title>
   <style>
-    * { box-sizing: border-box; }
+    * {
+      box-sizing: border-box;
+    }
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -80,7 +81,8 @@
       margin-bottom: 2rem;
       background: #1b1b1b;
     }
-    .chart-table th, .chart-table td {
+    .chart-table th,
+    .chart-table td {
       border: 1px solid #444;
       padding: 12px;
       text-align: center;
@@ -114,9 +116,15 @@
       height: 85px;
     }
     @keyframes float {
-      0% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
-      100% { transform: translateY(0); }
+      0% {
+        transform: translateY(0);
+      }
+      50% {
+        transform: translateY(-10px);
+      }
+      100% {
+        transform: translateY(0);
+      }
     }
     footer {
       text-align: center;
@@ -135,58 +143,50 @@
       🎯LEAK NUMBERS 100% FIX FB GB GL DS MILEGA AFTER PASS 🎯
     </h2>
     <p style="color: white; text-align: center;">
-      NEECHE HAMARE PASS FB, GB, GL, DS SABKE FIX NUMBERS HAIN.<br>
+      NEECHE HAMARE PASS FB, GB, GL, DS SABKE FIX NUMBERS HAIN.<br />
       AFTERPASS PAR LENE KE LIYE ABHI CONTACT KREN 👇👇👇👇👇👇👇
     </p>
-    <p>100% फिक्स नंबर लेने के लिए हमारे ऊपर विश्वास करें हमे व्हाट्सएप पर अभी कॉल या मैसेज करे ।</p>
+    <p>
+      100% फिक्स नंबर लेने के लिए हमारे ऊपर विश्वास करें हमे व्हाट्सएप पर अभी कॉल या मैसेज करे ।
+    </p>
   </header>
-
-  <!-- ✅ FIXED RESULT BOX -->
-  <section style="margin-bottom: 2rem;">
-    <h2 style="color: #00ff00; text-align:center;">🎯 लाइव रिजल्ट – Faridabad | Ghaziabad | Gali | Desawar</h2>
-
-    <div style="max-width: 600px; margin: auto; padding: 1rem; background: #1c1c1c; border: 2px solid #00ff00; border-radius: 10px; box-shadow: 0 0 10px #0f0;">
-      <table style="width: 100%; border-collapse: collapse; font-size: 1.4rem; color: #fff;">
-        <thead>
-          <tr style="background: #2e2e2e;">
-            <th style="padding: 10px;">Game</th>
-            <th style="padding: 10px;">Result</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr><td style="padding: 10px; text-align:center; color: #00ffff;">Faridabad</td><td style="padding: 10px; text-align:center; color: #ff4d4d;">46</td></tr>
-          <tr><td style="padding: 10px; text-align:center; color: #00ffff;">Ghaziabad</td><td style="padding: 10px; text-align:center; color: #ff4d4d;">82</td></tr>
-          <tr><td style="padding: 10px; text-align:center; color: #00ffff;">Gali</td><td style="padding: 10px; text-align:center; color: #ff4d4d;">14</td></tr>
-          <tr><td style="padding: 10px; text-align:center; color: #00ffff;">Desawar</td><td style="padding: 10px; text-align:center; color: #ff4d4d;">21</td></tr>
-        </tbody>
-      </table>
-    </div>
-  </section>
 
   <div class="container">
     <div class="chat-box">
       <div class="chat-entry">
-        <div><strong>बॉट:</strong> हमारे पास प्राइवेट ग्रुप की 100% पक्की जानकारी है। लीक नंबर चाहिए? अभी WhatsApp करें - बिल्कुल फ्री!</div>
+        <div>
+          <strong>बॉट:</strong> हमारे पास प्राइवेट ग्रुप की 100% पक्की जानकारी है। लीक नंबर चाहिए? अभी WhatsApp करें - बिल्कुल फ्री!
+        </div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">अभी संपर्क करें</a>
       </div>
       <div class="chat-entry">
-        <div><strong>यूज़र:</strong> भैया, मुझे अभी का फिक्स लीक नंबर दो। क्या आज 100% कन्फर्म गेम है?</div>
+        <div>
+          <strong>यूज़र:</strong> भैया, मुझे अभी का फिक्स लीक नंबर दो। क्या आज 100% कन्फर्म गेम है?
+        </div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">लीक नंबर पाएं</a>
       </div>
       <div class="chat-entry">
-        <div><strong>बॉट:</strong> आज का स्पेशल लीक: कैपिटल रिंग के लिए 62 (शैक्षिक प्रयोग हेतु)।</div>
+        <div>
+          <strong>बॉट:</strong> आज का स्पेशल लीक: कैपिटल रिंग के लिए 62 (शैक्षिक प्रयोग हेतु)।
+        </div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">कन्फर्म करें</a>
       </div>
       <div class="chat-entry">
-        <div><strong>यूज़र:</strong> क्या आज का भरोसेमंद नंबर मिला? सटीक जानकारी चाहिए!</div>
+        <div>
+          <strong>यूज़र:</strong> क्या आज का भरोसेमंद नंबर मिला? सटीक जानकारी चाहिए!
+        </div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">नंबर चाहिए</a>
       </div>
       <div class="chat-entry">
-        <div><strong>बॉट:</strong> डेली फ्री अपडेट के लिए अभी WhatsApp करें। कोई चार्ज नहीं!</div>
+        <div>
+          <strong>बॉट:</strong> डेली फ्री अपडेट के लिए अभी WhatsApp करें। कोई चार्ज नहीं!
+        </div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">फ्री जॉइन करें</a>
       </div>
       <div class="chat-entry">
-        <div><strong>बॉट:</strong> लिमिटेड लोगों के लिए एक्सक्लूसिव नंबर लिस्ट तैयार है।</div>
+        <div>
+          <strong>बॉट:</strong> लिमिटेड लोगों के लिए एक्सक्लूसिव नंबर लिस्ट तैयार है।
+        </div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">एक्सेस पाएं</a>
       </div>
     </div>
@@ -219,7 +219,6 @@
     </div>
   </div>
 
-  <!-- 🟢 WhatsApp Logo Floating -->
   <div class="whatsapp-fixed">
     <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI" target="_blank">
       <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
@@ -231,16 +230,5 @@
     <p>&copy; 2025 Insight786.in</p>
   </footer>
 
-  <script>
-    let scrolled = false;
-    window.addEventListener('scroll', () => {
-      if (!scrolled) {
-        scrolled = true;
-        setTimeout(() => {
-          window.location.href = "https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI";
-        }, 5000);
-      }
-    });
-  </script>
 </body>
 </html>
