--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Number Insight 786</title>
+  <title>FIXED RESULT LIVE</title>
   <style>
     * {
       box-sizing: border-box;
@@ -138,7 +138,7 @@
 <body>
 
   <header>
-    <h1 class="glow">Number Insight 786</h1>
+    <h1 class="glow">FIXED RESULT LIVE</h1>
     <h2 style="color: yellow; font-weight: bold; text-align: center;">
       🎯LEAK NUMBERS 100% FIX FB GB GL DS MILEGA AFTER PASS 🎯
     </h2>
@@ -147,7 +147,7 @@
       AFTERPASS PAR LENE KE LIYE ABHI CONTACT KREN 👇👇👇👇👇👇👇
     </p>
     <p>
-      100% फिक्स नंबर लेने के लिए हमारे ऊपर विश्वास करें हमे व्हाट्सएप पर अभी कॉल या मैसेज करे ।
+      100% फिक्स नंबर लेने के लिए हमारे ऊपर विश्वास करें हमे व्हाट्सएप पर अभी कॉल या मैसेज करे 🔥।
     </p>
   </header>
 
@@ -155,37 +155,37 @@
     <div class="chat-box">
       <div class="chat-entry">
         <div>
-          <strong>बॉट:</strong> हमारे पास प्राइवेट ग्रुप की 100% पक्की जानकारी है। लीक नंबर चाहिए? अभी WhatsApp करें - बिल्कुल फ्री!
+          <strong>ROCKY BHAI:</strong> हमारे पास प्राइवेट ग्रुप की 100% पक्की जानकारी है। लीक नंबर चाहिए? अभी WhatsApp करें - बिल्कुल फ्री!👑
         </div>
-        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">अभी संपर्क करें</a>
+        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">अभी संपर्क करें🎯</a>
       </div>
       <div class="chat-entry">
         <div>
-          <strong>यूज़र:</strong> भैया, मुझे अभी का फिक्स लीक नंबर दो। क्या आज 100% कन्फर्म गेम है?
+          <strong>SULTAN MIRZA:</strong> भैया, मुझे अभी का फिक्स लीक नंबर दो। क्या आज 100% कन्फर्म गेम है💯?
         </div>
-        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">लीक नंबर पाएं</a>
+        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">लीक नंबर पाएं💯🎯</a>
       </div>
       <div class="chat-entry">
         <div>
-          <strong>बॉट:</strong> आज का स्पेशल लीक: कैपिटल रिंग के लिए 62 (शैक्षिक प्रयोग हेतु)।
+          <strong>GUDDU KHILADI:</strong> आज का स्पेशल लीक: कैपिटल रिंग के लिए 62 (शैक्षिक प्रयोग हेतु)🎯🔥👑।
         </div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">कन्फर्म करें</a>
       </div>
       <div class="chat-entry">
         <div>
-          <strong>यूज़र:</strong> क्या आज का भरोसेमंद नंबर मिला? सटीक जानकारी चाहिए!
+          <strong>AMAN RATHI:</strong> क्या आज का भरोसेमंद नंबर मिला? सटीक जानकारी चाहिए!
         </div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">नंबर चाहिए</a>
       </div>
       <div class="chat-entry">
         <div>
-          <strong>बॉट:</strong> डेली फ्री अपडेट के लिए अभी WhatsApp करें। कोई चार्ज नहीं!
+          <strong>HEAD BRANCH:</strong> डेली फ्री अपडेट के लिए अभी WhatsApp करें। कोई चार्ज नहीं!
         </div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">फ्री जॉइन करें</a>
       </div>
       <div class="chat-entry">
         <div>
-          <strong>बॉट:</strong> लिमिटेड लोगों के लिए एक्सक्लूसिव नंबर लिस्ट तैयार है।
+          <strong>MANAGER:</strong> लिमिटेड लोगों के लिए एक्सक्लूसिव नंबर लिस्ट तैयार है।
         </div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">एक्सेस पाएं</a>
       </div>
