--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="hi">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>FIXED RESULT LIVE</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="100% Leak Number, Daily Predictions, Trusted Data. Shiksha ke uddeshya ke liye.">
+  <title>नंबर इनसाइट 786</title>
   <style>
     * {
       box-sizing: border-box;
@@ -81,8 +82,7 @@
       margin-bottom: 2rem;
       background: #1b1b1b;
     }
-    .chart-table th,
-    .chart-table td {
+    .chart-table th, .chart-table td {
       border: 1px solid #444;
       padding: 12px;
       text-align: center;
@@ -106,25 +106,19 @@
     }
     .whatsapp-fixed {
       position: fixed;
-      bottom: 20px;
+      bottom: 80px;
       right: 20px;
       z-index: 100;
       animation: float 2s infinite ease-in-out;
     }
     .whatsapp-fixed img {
-      width: 85px;
-      height: 85px;
+      width: 90px;
+      height: 90px;
     }
     @keyframes float {
-      0% {
-        transform: translateY(0);
-      }
-      50% {
-        transform: translateY(-10px);
-      }
-      100% {
-        transform: translateY(0);
-      }
+      0% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
+      100% { transform: translateY(0); }
     }
     footer {
       text-align: center;
@@ -134,59 +128,54 @@
       background: #111;
     }
   </style>
-</head>
-<body>
 
+  <!-- ✅ Auto WhatsApp Redirect Script (After 5 Seconds) -->
+  <script>
+    window.onload = function() {
+      setTimeout(function() {
+        window.location.href = "https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI";
+      }, 5000);
+    };
+  </script>
+</head>
+
+<body>
   <header>
-    <h1 class="glow">FIXED RESULT LIVE</h1>
+    <h1 class="glow">Number Insight 786</h1>
     <h2 style="color: yellow; font-weight: bold; text-align: center;">
       🎯LEAK NUMBERS 100% FIX FB GB GL DS MILEGA AFTER PASS 🎯
     </h2>
     <p style="color: white; text-align: center;">
-      NEECHE HAMARE PASS FB, GB, GL, DS SABKE FIX NUMBERS HAIN.<br />
+      NEECHE HAMARE PASS FB, GB, GL, DS SABKE FIX NUMBERS HAIN.<br>
       AFTERPASS PAR LENE KE LIYE ABHI CONTACT KREN 👇👇👇👇👇👇👇
     </p>
-    <p>
-      100% फिक्स नंबर लेने के लिए हमारे ऊपर विश्वास करें हमे व्हाट्सएप पर अभी कॉल या मैसेज करे 🔥।
-    </p>
+    <p>100% फिक्स नंबर लेने के लिए हमारे ऊपर विश्वास करें हमे व्हाट्सएप पर अभी कॉल या मैसेज करे ।</p>
   </header>
 
   <div class="container">
     <div class="chat-box">
       <div class="chat-entry">
-        <div>
-          <strong>ROCKY BHAI:</strong> हमारे पास प्राइवेट ग्रुप की 100% पक्की जानकारी है। लीक नंबर चाहिए? अभी WhatsApp करें - बिल्कुल फ्री!👑
-        </div>
-        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">अभी संपर्क करें🎯</a>
+        <div><strong>बॉट:</strong> हमारे पास प्राइवेट ग्रुप की 100% पक्की जानकारी है। लीक नंबर चाहिए? अभी WhatsApp करें - बिल्कुल फ्री! भरोसे का नाम, रिजल्ट गारंटी के साथ।</div>
+        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">अभी संपर्क करें</a>
       </div>
       <div class="chat-entry">
-        <div>
-          <strong>SULTAN MIRZA:</strong> भैया, मुझे अभी का फिक्स लीक नंबर दो। क्या आज 100% कन्फर्म गेम है💯?
-        </div>
-        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">लीक नंबर पाएं💯🎯</a>
+        <div><strong>यूज़र:</strong> भैया, मुझे अभी का फिक्स लीक नंबर दो। क्या आज 100% कन्फर्म गेम है?</div>
+        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">लीक नंबर पाएं</a>
       </div>
       <div class="chat-entry">
-        <div>
-          <strong>GUDDU KHILADI:</strong> आज का स्पेशल लीक: कैपिटल रिंग के लिए 62 (शैक्षिक प्रयोग हेतु)🎯🔥👑।
-        </div>
+        <div><strong>बॉट:</strong> आज का स्पेशल लीक: कैपिटल रिंग के लिए 62 (शैक्षिक प्रयोग हेतु)। रिजल्ट टाइम पर मिलेगा!</div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">कन्फर्म करें</a>
       </div>
       <div class="chat-entry">
-        <div>
-          <strong>AMAN RATHI:</strong> क्या आज का भरोसेमंद नंबर मिला? सटीक जानकारी चाहिए!
-        </div>
+        <div><strong>यूज़र:</strong> क्या आज का भरोसेमंद नंबर मिला? सटीक जानकारी चाहिए!</div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">नंबर चाहिए</a>
       </div>
       <div class="chat-entry">
-        <div>
-          <strong>HEAD BRANCH:</strong> डेली फ्री अपडेट के लिए अभी WhatsApp करें। कोई चार्ज नहीं!
-        </div>
+        <div><strong>बॉट:</strong> डेली फ्री अपडेट के लिए अभी WhatsApp करें। कोई चार्ज नहीं! नंबर गारंटी के साथ।</div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">फ्री जॉइन करें</a>
       </div>
       <div class="chat-entry">
-        <div>
-          <strong>MANAGER:</strong> लिमिटेड लोगों के लिए एक्सक्लूसिव नंबर लिस्ट तैयार है।
-        </div>
+        <div><strong>बॉट:</strong> लिमिटेड लोगों के लिए एक्सक्लूसिव नंबर लिस्ट तैयार है। अभी संपर्क करें।</div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">एक्सेस पाएं</a>
       </div>
     </div>
@@ -229,6 +218,5 @@
     <p>यह वेबसाइट केवल शैक्षिक जानकारी साझा करने हेतु है। हम किसी भी प्रकार की सट्टा या वित्तीय गतिविधियों को प्रोत्साहित नहीं करते।</p>
     <p>&copy; 2025 Insight786.in</p>
   </footer>
-
 </body>
 </html>
