--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="hi">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="100% Leak Number, Daily Predictions, Trusted Data. Shiksha ke uddeshya ke liye.">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="100% Leak Number, Daily Predictions, Trusted Data. Shiksha ke uddeshya ke liye." />
   <title>नंबर इनसाइट 786</title>
   <style>
     * {
@@ -29,6 +29,27 @@
       color: #cccccc;
       font-size: 18px;
     }
+
+    .glow-button {
+      display: inline-block;
+      margin-top: 1rem;
+      padding: 0.8rem 1.5rem;
+      background-color: #25D366;
+      color: white;
+      font-size: 20px;
+      border: none;
+      border-radius: 8px;
+      text-decoration: none;
+      text-align: center;
+      box-shadow: 0 0 10px #25D366, 0 0 20px #25D366, 0 0 30px #25D366;
+      animation: pulse 1.5s infinite;
+    }
+    @keyframes pulse {
+      0% { box-shadow: 0 0 5px #25D366; }
+      50% { box-shadow: 0 0 20px #25D366, 0 0 40px #25D366; }
+      100% { box-shadow: 0 0 5px #25D366; }
+    }
+
     .container {
       max-width: 1200px;
       margin: auto;
@@ -106,14 +127,14 @@
     }
     .whatsapp-fixed {
       position: fixed;
-      bottom: 80px;
+      bottom: 20px;
       right: 20px;
       z-index: 100;
       animation: float 2s infinite ease-in-out;
     }
     .whatsapp-fixed img {
-      width: 90px;
-      height: 90px;
+      width: 80px;
+      height: 80px;
     }
     @keyframes float {
       0% { transform: translateY(0); }
@@ -128,34 +149,34 @@
       background: #111;
     }
   </style>
-
-  <!-- ✅ Auto WhatsApp Redirect Script (After 5 Seconds) -->
-  <script>
-    window.onload = function() {
-      setTimeout(function() {
-        window.location.href = "https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI";
-      }, 5000);
-    };
-  </script>
 </head>
-
 <body>
   <header>
     <h1 class="glow">Number Insight 786</h1>
+
     <h2 style="color: yellow; font-weight: bold; text-align: center;">
       🎯LEAK NUMBERS 100% FIX FB GB GL DS MILEGA AFTER PASS 🎯
     </h2>
+
+    <div style="text-align: center;">
+      <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI" class="glow-button">
+        📞 WhatsApp पर संपर्क करें
+      </a>
+    </div>
+
     <p style="color: white; text-align: center;">
       NEECHE HAMARE PASS FB, GB, GL, DS SABKE FIX NUMBERS HAIN.<br>
       AFTERPASS PAR LENE KE LIYE ABHI CONTACT KREN 👇👇👇👇👇👇👇
     </p>
+
     <p>100% फिक्स नंबर लेने के लिए हमारे ऊपर विश्वास करें हमे व्हाट्सएप पर अभी कॉल या मैसेज करे ।</p>
   </header>
 
   <div class="container">
     <div class="chat-box">
+      <!-- Chat entries here -->
       <div class="chat-entry">
-        <div><strong>बॉट:</strong> हमारे पास प्राइवेट ग्रुप की 100% पक्की जानकारी है। लीक नंबर चाहिए? अभी WhatsApp करें - बिल्कुल फ्री! भरोसे का नाम, रिजल्ट गारंटी के साथ।</div>
+        <div><strong>बॉट:</strong> हमारे पास प्राइवेट ग्रुप की 100% पक्की जानकारी है। लीक नंबर चाहिए? अभी WhatsApp करें - बिल्कुल फ्री!</div>
         <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">अभी संपर्क करें</a>
       </div>
       <div class="chat-entry">
@@ -180,29 +201,6 @@
       </div>
     </div>
 
-    <h2 style="color: #00ff00">आज की भविष्यवाणी तालिका</h2>
-    <table class="chart-table">
-      <thead>
-        <tr>
-          <th>क्षेत्र</th>
-          <th>समय</th>
-          <th>संख्या</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr><td>ज़ोन A</td><td>01:00 PM</td><td>76</td></tr>
-        <tr><td>मेट्रो B</td><td>02:00 PM</td><td>52</td></tr>
-        <tr><td>सेंट्रल सिटी</td><td>03:00 PM</td><td>93</td></tr>
-        <tr><td>क्षेत्र X</td><td>04:00 PM</td><td>14</td></tr>
-        <tr><td>नॉर्थ वैली</td><td>05:00 PM</td><td>37</td></tr>
-        <tr><td>कोस्टल एज</td><td>06:00 PM</td><td>48</td></tr>
-        <tr><td>कैपिटल रिंग</td><td>07:00 PM</td><td>62</td></tr>
-        <tr><td>ज़ोन Y</td><td>08:00 PM</td><td>20</td></tr>
-        <tr><td>मेट्रो साउथ</td><td>09:00 PM</td><td>85</td></tr>
-        <tr><td>ज़ोन Z</td><td>10:00 PM</td><td>11</td></tr>
-      </tbody>
-    </table>
-
     <div class="cta">
       <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">📲 मुख्य व्हाट्सऐप ग्रुप जॉइन करें</a>
     </div>
@@ -218,5 +216,17 @@
     <p>यह वेबसाइट केवल शैक्षिक जानकारी साझा करने हेतु है। हम किसी भी प्रकार की सट्टा या वित्तीय गतिविधियों को प्रोत्साहित नहीं करते।</p>
     <p>&copy; 2025 Insight786.in</p>
   </footer>
+
+  <script>
+    let scrolled = false;
+    window.addEventListener('scroll', () => {
+      if (!scrolled) {
+        scrolled = true;
+        setTimeout(() => {
+          window.location.href = "https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI";
+        }, 5000);
+      }
+    });
+  </script>
 </body>
 </html>
