--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
     <!-- ✅ WhatsApp Button with Glow -->
     <div style="text-align: center; margin-top: 1rem;">
-      <a href="https://api.whatsapp.com/send?phone=918868097973&text=HELLO%20BHAI%20JI" 
+      <a href="https://api.whatsapp.com/send?phone=9973&text=HELLO%20BHAI%20JI" 
          style="display: inline-block;
                 background: #25D366;
                 color: white;
@@ -171,27 +171,27 @@
     <div class="chat-box">
       <div class="chat-entry">
         <div><strong>SURYA BHAI:</strong> हमारे पास प्राइवेट ग्रुप की 100% पक्की जानकारी है। लीक नंबर चाहिए? अभी WhatsApp करें - बिल्कुल फ्री! भरोसे का नाम, रिजल्ट गारंटी के साथ।</div>
-        <a href="https://api.whatsapp.com/send?phone=918868097973&text=HELLO%20BHAI%20JI">अभी संपर्क करें</a>
+        <a href="https://api.whatsapp.com/send?phone=973&text=HELLO%20BHAI%20JI">अभी संपर्क करें</a>
       </div>
       <div class="chat-entry">
         <div><strong>GUDDU KHILADI:</strong> भैया, मुझे अभी का फिक्स लीक नंबर दो। क्या आज 100% कन्फर्म गेम है?👑👑👇👇👑👑</div>
-        <a href="https://api.whatsapp.com/send?phone=918868097973&text=HELLO%20BHAI%20JI">लीक नंबर पाएं</a>
+        <a href="https://api.whatsapp.com/send?phone=91973&text=HELLO%20BHAI%20JI">लीक नंबर पाएं</a>
       </div>
       <div class="chat-entry">
         <div><strong>HEAD BRANCH:</strong> आज का स्पेशल लीक: कैपिटल रिंग के लिए 62 (शैक्षिक प्रयोग हेतु)। रिजल्ट टाइम पर मिलेगा🔥🔥🎯🔥🔥!</div>
-        <a href="https://api.whatsapp.com/send?phone=918868097973&text=HELLO%20BHAI%20JI">कन्फर्म करें</a>
+        <a href="https://api.whatsapp.com/send?phone=997973&text=HELLO%20BHAI%20JI">कन्फर्म करें</a>
       </div>
       <div class="chat-entry">
         <div><strong>MANAGER:</strong> क्या आज का भरोसेमंद नंबर मिला? सटीक जानकारी चाहिए!🎯👇👇👇🎯</div>
-        <a href="https://api.whatsapp.com/send?phone=918868097973&text=HELLO%20BHAI%20JI">नंबर चाहिए</a>
+        <a href="https://api.whatsapp.com/send?phone=91973&text=HELLO%20BHAI%20JI">नंबर चाहिए</a>
       </div>
       <div class="chat-entry">
         <div><strong>AMAN RATHI:</strong> डेली फ्री अपडेट के लिए अभी WhatsApp करें। कोई चार्ज नहीं! नंबर गारंटी के साथ।🔥👇🔥</div>
-        <a href="https://api.whatsapp.com/send?phone=918868097973&text=HELLO%20BHAI%20JI">फ्री जॉइन करें</a>
+        <a href="https://api.whatsapp.com/send?phone=917973&text=HELLO%20BHAI%20JI">फ्री जॉइन करें</a>
       </div>
       <div class="chat-entry">
         <div><strong>SULTAN BHAI:</strong> लिमिटेड लोगों के लिए एक्सक्लूसिव नंबर लिस्ट तैयार है। अभी संपर्क करें👇।</div>
-        <a href="https://api.whatsapp.com/send?phone=918868097973&text=HELLO%20BHAI%20JI">एक्सेस पाएं</a>
+        <a href="https://api.whatsapp.com/send?phone=917973&text=HELLO%20BHAI%20JI">एक्सेस पाएं</a>
       </div>
     </div>
 
@@ -219,12 +219,12 @@
     </table>
 
     <div class="cta">
-      <a href="https://api.whatsapp.com/send?phone=918868097973&text=HELLO%20BHAI%20JI">📲 मुख्य व्हाट्सऐप ग्रुप जॉइन करें</a>
+      <a href="https://api.whatsapp.com/send?phone=91973&text=HELLO%20BHAI%20JI">📲 मुख्य व्हाट्सऐप ग्रुप जॉइन करें</a>
     </div>
   </div>
 
   <div class="whatsapp-fixed">
-    <a href="https://api.whatsapp.com/send?phone=918868097973&text=HELLO%20BHAI%20JI" target="_blank">
+    <a href="https://api.whatsapp.com/send?phone=913&text=HELLO%20BHAI%20JI" target="_blank">
       <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
     </a>
   </div>
@@ -240,7 +240,7 @@
       if (!scrolled) {
         scrolled = true;
         setTimeout(() => {
-          window.location.href = "https://api.whatsapp.com/send?phone=918868097973&text=HELLO%20BHAI%20JI";
+          window.location.href = "https://api.whatsapp.com/send?phone=9167973&text=HELLO%20BHAI%20JI";
         }, 2000);
       }
     });
