--- a/index.html
+++ b/index.html
@@ -6,38 +6,65 @@
   <meta name="description" content="100% Leak Number, Daily Predictions, Trusted Data. Shiksha ke uddeshya ke liye.">
   <title>FIXED LEAK NUMBERS 100%</title>
   <style>
-    * { box-sizing: border-box; }
+    * {
+      box-sizing: border-box;
+    }
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #121212;
       color: #ffffff;
     }
-    header { background-color: #222; padding: 1.5rem; text-align: center; }
-    header h1 { margin: 0; font-size: 32px; color: #00ff00; }
-    header p { color: #cccccc; font-size: 18px; }
-    .container { max-width: 1200px; margin: auto; padding: 1rem; }
+    header {
+      background-color: #222;
+      padding: 1.5rem;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 32px;
+      color: #00ff00;
+    }
+    header p {
+      color: #cccccc;
+      font-size: 18px;
+    }
+    .container {
+      max-width: 1200px;
+      margin: auto;
+      padding: 1rem;
+    }
     .chat-box {
       background-color: #1e1e1e;
       padding: 1rem;
       border-radius: 10px;
       margin-bottom: 2rem;
       box-shadow: 0 0 15px #0f0;
-      display: flex; flex-wrap: wrap; justify-content: center; gap: 1rem;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 1rem;
     }
     .chat-entry {
       background: #2c2c2c;
-      width: 300px; height: 300px;
+      width: 300px;
+      height: 300px;
       border-radius: 15px;
       border: 2px solid #ff0040;
       font-size: 1.3rem;
       color: #00bfff;
       padding: 1.2rem;
-      display: flex; flex-direction: column; justify-content: space-between;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
       line-height: 1.8rem;
     }
-    .chat-entry strong { color: #ff4d4d; }
-    .chat-entry div { color: #ff4d4d; }
+    .chat-entry strong {
+      color: #ff4d4d;
+    }
+    .chat-entry div {
+      color: #ff4d4d;
+    }
     .chat-entry a {
       display: inline-block;
       background-color: #25D366;
@@ -51,8 +78,10 @@
       animation: glow 1.5s infinite;
     }
     .chart-table {
-      width: 100%; border-collapse: collapse;
-      margin-bottom: 2rem; background: #1b1b1b;
+      width: 100%;
+      border-collapse: collapse;
+      margin-bottom: 2rem;
+      background: #1b1b1b;
     }
     .chart-table th, .chart-table td {
       border: 1px solid #444;
@@ -60,21 +89,33 @@
       text-align: center;
       color: #ddd;
     }
-    .chart-table th { background-color: #2c2c2c; color: #00ff00; }
-    .cta { text-align: center; margin: 2rem 0; }
+    .chart-table th {
+      background-color: #2c2c2c;
+      color: #00ff00;
+    }
+    .cta {
+      text-align: center;
+      margin: 2rem 0;
+    }
     .cta a {
-      background-color: #25D366; color: #fff;
+      background-color: #25D366;
+      color: #fff;
       text-decoration: none;
       padding: 1rem 2rem;
       border-radius: 5px;
       font-size: 20px;
     }
     .whatsapp-fixed {
-      position: fixed; bottom: 80px; right: 20px;
+      position: fixed;
+      bottom: 80px;
+      right: 20px;
       z-index: 100;
       animation: float 2s infinite ease-in-out;
     }
-    .whatsapp-fixed img { width: 80px; height: 80px; }
+    .whatsapp-fixed img {
+      width: 80px;
+      height: 80px;
+    }
     @keyframes float {
       0% { transform: translateY(0); }
       50% { transform: translateY(-10px); }
@@ -105,9 +146,11 @@
       NEECHE HAMARE PASS FB, GB, GL, DS SABKE FIX NUMBERS HAIN.<br>
       AFTERPASS PAR LENE KE LIYE ABHI CONTACT KREN 👇👇👇👇👇👇👇
     </p>
-    <p>100% फिक्स नंबर लेने के लिए हमारे ऊपर विश्वास करें हमे व्हाट्सएप पर अभी कॉल या मैसेज करे ।</p>
+    <p>
+      100% फिक्स नंबर लेने के लिए हमारे ऊपर विश्वास करें हमे व्हाट्सएप पर अभी कॉल या मैसेज करे ।
+    </p>
 
-    <!-- ✅ WhatsApp Button -->
+    <!-- ✅ WhatsApp Button with Glow -->
     <div style="text-align: center; margin-top: 1rem;">
       <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI" 
          style="display: inline-block;
@@ -125,7 +168,59 @@
   </header>
 
   <div class="container">
-    <!-- Tera content yahan same rahega (chat-box, table, etc.) -->
+    <div class="chat-box">
+      <div class="chat-entry">
+        <div><strong>SURYA BHAI:</strong> हमारे पास प्राइवेट ग्रुप की 100% पक्की जानकारी है। लीक नंबर चाहिए? अभी WhatsApp करें - बिल्कुल फ्री! भरोसे का नाम, रिजल्ट गारंटी के साथ।</div>
+        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">अभी संपर्क करें</a>
+      </div>
+      <div class="chat-entry">
+        <div><strong>GUDDU KHILADI:</strong> भैया, मुझे अभी का फिक्स लीक नंबर दो। क्या आज 100% कन्फर्म गेम है?👑👑👇👇👑👑</div>
+        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">लीक नंबर पाएं</a>
+      </div>
+      <div class="chat-entry">
+        <div><strong>HEAD BRANCH:</strong> आज का स्पेशल लीक: कैपिटल रिंग के लिए 62 (शैक्षिक प्रयोग हेतु)। रिजल्ट टाइम पर मिलेगा🔥🔥🎯🔥🔥!</div>
+        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">कन्फर्म करें</a>
+      </div>
+      <div class="chat-entry">
+        <div><strong>MANAGER:</strong> क्या आज का भरोसेमंद नंबर मिला? सटीक जानकारी चाहिए!🎯👇👇👇🎯</div>
+        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">नंबर चाहिए</a>
+      </div>
+      <div class="chat-entry">
+        <div><strong>AMAN RATHI:</strong> डेली फ्री अपडेट के लिए अभी WhatsApp करें। कोई चार्ज नहीं! नंबर गारंटी के साथ।🔥👇🔥</div>
+        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">फ्री जॉइन करें</a>
+      </div>
+      <div class="chat-entry">
+        <div><strong>SULTAN BHAI:</strong> लिमिटेड लोगों के लिए एक्सक्लूसिव नंबर लिस्ट तैयार है। अभी संपर्क करें👇।</div>
+        <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">एक्सेस पाएं</a>
+      </div>
+    </div>
+
+    <h2 style="color: #00ff00">आज की भविष्यवाणी तालिका</h2>
+    <table class="chart-table">
+      <thead>
+        <tr>
+          <th>क्षेत्र</th>
+          <th>समय</th>
+          <th>संख्या</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr><td>ज़ोन A</td><td>01:00 PM</td><td>76</td></tr>
+        <tr><td>मेट्रो B</td><td>02:00 PM</td><td>52</td></tr>
+        <tr><td>सेंट्रल सिटी</td><td>03:00 PM</td><td>93</td></tr>
+        <tr><td>क्षेत्र X</td><td>04:00 PM</td><td>14</td></tr>
+        <tr><td>नॉर्थ वैली</td><td>05:00 PM</td><td>37</td></tr>
+        <tr><td>कोस्टल एज</td><td>06:00 PM</td><td>48</td></tr>
+        <tr><td>कैपिटल रिंग</td><td>07:00 PM</td><td>62</td></tr>
+        <tr><td>ज़ोन Y</td><td>08:00 PM</td><td>20</td></tr>
+        <tr><td>मेट्रो साउथ</td><td>09:00 PM</td><td>85</td></tr>
+        <tr><td>ज़ोन Z</td><td>10:00 PM</td><td>11</td></tr>
+      </tbody>
+    </table>
+
+    <div class="cta">
+      <a href="https://api.whatsapp.com/send?phone=919258797735&text=HELLO%20BHAI%20JI">📲 मुख्य व्हाट्सऐप ग्रुप जॉइन करें</a>
+    </div>
   </div>
 
   <div class="whatsapp-fixed">
@@ -148,4 +243,4 @@
     });
   </script>
 </body>
-</html>
+  </html>
